--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,28 +1,12 @@
 .App {
+  background: url('../src//assets/trees.jpeg') no-repeat center;
+  background-size: cover;
   text-align: center;
+  height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App h1 {
+  margin-top: 0px;
+  padding-top: 10px;
+  color: rgb(115, 236, 161);
 }
