--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -8,5 +8,22 @@
 .App h1 {
   margin-top: 0px;
   padding-top: 10px;
-  color: rgb(115, 236, 161);
+  color: rgb(250, 250, 114);
+  text-shadow: 0px -2px 0px #333,
+  0px 2px 3px #666;
+  
+}
+
+.todo {
+  font-size: 28px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  text-shadow: 0 0 10px #fff,
+  0 0 20px #fff,
+  0 0 30px #fff,
+  0 0 40px #36cc68,
+  0 0 70px #36cc68,
+  0 0 80px #36cc68,
+  0 0 100px #36cc68,
+  0 0 150px #36cc68;
 }
